--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -26,6 +26,7 @@ $grey-color: #828282 !default;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark: #1c1c1d;
 $grey-900: #212529;
+$caltech-color: #FF6C0C !default;
 
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
