--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -109,6 +109,9 @@
               {% endif %}
             {% endif %}
           {% endfor %}
+          <li class="nav-item">
+            <a class="nav-link" href="{{ '/assets/pdfs/CV_cheng_2024.pdf' | relative_url }}" target="_blank">CV</a>
+          </li>
           {% if site.enable_darkmode %}
             <!-- Toogle theme mode -->
             <li class="toggle-container">
